--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>maven-model</artifactId>
             <version>3.3.1</version>
         </dependency>
+        <dependency>
+                <groupId>org.soot-oss</groupId>
+                <artifactId>soot</artifactId>
+                <version>4.2.1</version>
+        </dependency>
     </dependencies>
 
 
